experimental/report/testdata/single-line.yaml.fancy.txt
remark: "proto4" isn't real, it can't hurt you
  --> foo.proto:1:10
   | 
 1 | syntax = "proto4"
   |          ^^^^^^^^ help: change this to "proto5"

error: package
  --> foo.proto:3:1
   | 
 3 | package abc.xyz;
   | ^^^^^^^        - semicolon
   | |
   | package

error: this is an overlapping error
  --> foo.proto:3:1
   | 
 3 | package abc.xyz;
   | ^^^^^^^--------- package decl
   | |
   | package

error: P A C K A G E
  --> foo.proto:3:1
   | 
 3 | package abc.xyz;
   | ^ -- -- help: ge
   | | |
   | help: p
   |   |
   |   help: ck

error: P A C K A G E (different order)
  --> foo.proto:3:3
   | 
 3 | package abc.xyz;
   | - ^^ -- help: ge
   | | |
   | | help: ck
   | |
   | help: p

error: P A C K A G E (single letters)
  --> foo.proto:3:1
   | 
 3 | package abc.xyz;
   | ^ -- -- g
   | | |
   | p |
   |   |
   |   k

encountered 5 errors
